--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -17,6 +17,9 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.22.2'
+    - name: Create Android folder
+      run: flutter create .
+
 
     - name: Install dependencies
       run: flutter pub get
