--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,6 +16,8 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.22.0'
+      - name: Install dependencies
+        run: flutter pub get
 
       - name: Create Flutter Android Project
         run: |
