--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   path_provider: ^2.1.1
   flutter_local_notifications: ^17.0.0
   http: ^1.1.0              # لإرسال البيانات إلى Google Sheet
-  telephony: ^0.2.0          # لقراءة رسائل SMS
+  telephony: ^0.2.2          # لقراءة رسائل SMS
   video_player: ^2.6.0
+  permission_handler: ^10.4.0
 flutter:
   uses-material-design: true
