--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -29,15 +29,14 @@ jobs:
 
       - name: Add Android Permissions
         run: |
-          FILE="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
-            sed -i '/<manifest>/a \
-            \<uses-permission android:name=\"android.permission.INTERNET\" />\
-            \<uses-permission android:name=\"android.permission.MODIFY_AUDIO_SETTINGS\" />\
-            \<uses-permission android:name=\"android.permission.ACCESS_NETWORK_STATE\" />\
-            \<uses-permission android:name=\"android.permission.WRITE_SETTINGS\" />\
-            \<uses-permission android:name=\"android.permission.RECEIVE_SMS\" />\
-            \<uses-permission android:name=\"android.permission.READ_SMS\" />\
-            \<uses-permission android:name=\"android.permission.FOREGROUND_SERVICE\" />' temp_flutter_app/android/app/src/main/AndroidManifest.xml
+          - name: Add Android permissions
+            run: |
+              FILE="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
+              sed -i '/<manifest/a \
+              <uses-permission android:name="android.permission.INTERNET" /> \
+              <uses-permission android:name="android.permission.READ_SMS" /> \
+              <uses-permission android:name="android.permission.RECEIVE_SMS" /> \
+              <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' $FILE
 
       - name: Build APK
         run: |
