--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -30,11 +30,10 @@ jobs:
       - name: Add Android Permissions
         run: |
           FILE="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
-          sed -i '/<manifest/a \
-<uses-permission android:name="android.permission.INTERNET" /> \
-<uses-permission android:name="android.permission.READ_SMS" /> \
-<uses-permission android:name="android.permission.RECEIVE_SMS" /> \
-<uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' "$FILE"
+          sed -i '/<manifest/a <uses-permission android:name="android.permission.INTERNET" /> \
+          <uses-permission android:name="android.permission.READ_SMS" /> \
+          <uses-permission android:name="android.permission.RECEIVE_SMS" /> \
+          <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' "$FILE"
         shell: bash
         env:
           FLUTTER_ROOT: /opt/hostedtoolcache/flutter/stable-3.22.0-x64
