--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -30,12 +30,15 @@ jobs:
       - name: Update minSdkVersion to 23
         run: |
           FILE="temp_flutter_app/android/app/build.gradle"
-          sed -i 's/minSdkVersion [0-9]\+/minSdkVersion 23/' "$FILE"
+          # استخدام regex يطابق أي صيغة للسطر
+          sed -i 's/minSdkVersion[[:space:]]*[0-9]\+/minSdkVersion 23/' "$FILE"
+          echo "Updated minSdkVersion:"
+          grep minSdkVersion "$FILE"
 
       - name: Add Android Permissions
         run: |
           FILE="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
-            sed -i '/<manifest/a\
+          sed -i '/<manifest/a\
           <uses-permission android:name="android.permission.INTERNET" />\
           <uses-permission android:name="android.permission.READ_SMS" />\
           <uses-permission android:name="android.permission.RECEIVE_SMS" />\
