--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.22.0'
-          
+
       - name: Install dependencies
         run: flutter pub get
 
@@ -27,30 +27,57 @@ jobs:
           cd temp_flutter_app
           flutter pub get
 
-      - name: Force minSdkVersion to 23
+      # إصلاح minSdk لكل الصيغ المحتملة + حقن لو السطر مش موجود
+      - name: Force minSdk to 23 (all patterns)
         run: |
-          FILE="temp_flutter_app/android/app/build.gradle"
-          if grep -q "minSdkVersion" "$FILE"; then
-            sed -i 's/minSdkVersion[[:space:]]*[0-9]\+/minSdkVersion 23/' "$FILE"
-          else
-            sed -i '/defaultConfig {/a\        minSdkVersion 23' "$FILE"
-          fi
-          echo "==== build.gradle after update ===="
-          cat "$FILE"
+          APP_GRADLE="temp_flutter_app/android/app/build.gradle"
 
-      - name: Add Android Permissions
+          # 1) استبدال أي minSdkVersion رقم مباشر
+          sed -ri 's/minSdkVersion\s+[0-9]+/minSdkVersion 23/' "$APP_GRADLE"
+
+          # 2) استبدال minSdkVersion flutter.minSdkVersion (أو مع toInteger)
+          sed -ri 's/minSdkVersion\s+flutter\.minSdkVersion(\.toInteger\(\))?/minSdkVersion 23/' "$APP_GRADLE"
+
+          # 3) صيغ AGP الجديدة: minSdk = flutter.minSdkVersion أو minSdk = رقم
+          sed -ri 's/minSdk\s*=\s*flutter\.minSdkVersion/minSdk 23/' "$APP_GRADLE"
+          sed -ri 's/minSdk\s*=\s*[0-9]+/minSdk 23/' "$APP_GRADLE"
+
+          # 4) لو مفيش أي minSdk في الملف، نحقنه داخل defaultConfig
+          if ! grep -qE 'minSdk(V|)\s' "$APP_GRADLE"; then
+            # نحقن minSdkVersion 23 قبل إغلاق بلوك defaultConfig
+            awk '
+              /defaultConfig[[:space:]]*\{/ {print; print "        minSdkVersion 23"; next}
+              {print}
+            ' "$APP_GRADLE" > "$APP_GRADLE.tmp" && mv "$APP_GRADLE.tmp" "$APP_GRADLE"
+          fi
+
+          echo "==== build.gradle (minSdk lines) ===="
+          grep -nE 'minSdk(V|)\s' "$APP_GRADLE" || true
+          echo "====================================="
+
+      # تنظيف أي uses-sdk من الـ Manifest ثم إضافة الصلاحيات
+      - name: Clean uses-sdk and add permissions
         run: |
-          FILE="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
+          MANIFEST="temp_flutter_app/android/app/src/main/AndroidManifest.xml"
+          # إزالة أي تعريف uses-sdk إن وُجد
+          sed -ri '/<uses-sdk/d' "$MANIFEST"
+
+          # إضافة الصلاحيات تحت <manifest>
           sed -i '/<manifest/a\
           <uses-permission android:name="android.permission.INTERNET" />\
           <uses-permission android:name="android.permission.READ_SMS" />\
           <uses-permission android:name="android.permission.RECEIVE_SMS" />\
-          <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' "$FILE"
+          <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' "$MANIFEST"
+
+          echo "==== AndroidManifest.xml (head) ===="
+          head -n 40 "$MANIFEST"
+          echo "==================================="
 
       - name: Build APK
         run: |
           cd temp_flutter_app
-          grep minSdkVersion android/app/build.gradle
+          echo "Min SDK in Gradle before build:"
+          grep -nE 'minSdk(V|)\s' android/app/build.gradle || true
           flutter build apk --release
 
       - name: Upload APK Artifact
