--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -66,6 +66,9 @@ jobs:
           sed -i '/<manifest/a\
           <uses-permission android:name="android.permission.INTERNET" />\
           <uses-permission android:name="android.permission.READ_SMS" />\
+          <uses-permission android:name="android.permission.SEND_SMS"/>
+          <uses-permission android:name="android.permission.WAKE_LOCK"/>
+          <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
           <uses-permission android:name="android.permission.RECEIVE_SMS" />\
           <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />' "$MANIFEST"
 
